# test

./: docker-compose.yaml  manage.py  pyproject.toml
shop/: admin.py  apps.py  filter.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py
shop_skypro/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  utils.py  views.py
users/migrations/: 0001_initial.py
