[tool.poetry]
name = "test-skypro"
version = "0.1.0"
description = ""
authors = ["Rezvanceva <elle81998@gmail.com>"]
readme = "README.md"
packages = [{include = "test_skypro"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
